--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.1.1",
     "@mui/x-tree-view": "^7.18.0",
     "@types/leaflet": "^1.9.12",
+    "@xyflow/react": "^12.3.6",
     "leaflet": "^1.9.4",
     "milsymbol": "^2.2.0",
     "react": "^18.3.1",
